# ast-workshop

./: .gitignore  .pre-commit-config.yaml  README.md  exercise-notes.md  pyproject.toml  workshop.md
.github/workflows/: static.yml
checkpoints/: exercise_1.py  exercise_2.py  exercise_3.py  exercise_4.py  exercise_5.py  exercise_6.py  exercise_7.py  final.py  generic_exception_visitor.py  initial.py  stack.py
examples/: assert_transformer.py  assert_visitor.py  generic_exception_visitor.py  try_except_transformer.py  try_except_visitor_1.py  try_except_visitor_2.py
snippets/: assert.py  generic_exception.py  imports.py  try_except.py  try_except_nested.py
