[project]
name = "ast-workshop"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = []


[tool.ruff]
line-length = 64

format.indent-style = "space"
format.quote-style = "single"
format.docstring-code-format = true
format.skip-magic-trailing-comma = false

lint.isort.split-on-trailing-comma = false
lint.select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle error
  "F",    # pyflakes
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "N",    # pep8-naming
  "PERF", # perflint
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff-specific rules
  "UP",   # pyupgrade
  "W",    # pycodestyle warning
]
